--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   firebase_auth: ^3.2.0
   cloud_firestore: ^3.1.0
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^7.3.1
+  flutter_bloc: ^7.0.0
   pinput: ^1.2.0
   flutter_feather_icons: ^2.0.0+1
   dio: ^4.0.0
@@ -27,6 +27,9 @@ dependencies:
   syncfusion_flutter_charts: ^19.2.55+1
   lottie: ^1.0.1
   flutter_svg: 0.22.0
+  video_player: ^2.2.5
+  flick_video_player: ^0.3.1
+  visibility_detector: ^0.2.2
 
 
 dev_dependencies:
