--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
     - assets/lottie/
     - assets/audio/
     - assets/images/
+    - assets/images/banks/
     - assets/images/muscle/male/back/0/
     - assets/images/muscle/male/back/1/
     - assets/images/muscle/male/back/2/
