--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   audioplayers: ^0.20.1
   assets_audio_player: ^3.0.3+6
   url_launcher: ^6.0.12
+  cloud_functions: ^3.2.7
 
 
 dev_dependencies:
